--- a/options.html
+++ b/options.html
@@ -1,33 +1,29 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>Extension Options</title>
-<style>
-	body {
-		padding: 4px;
-	}
+  <head>
+    <title>Extension Options</title>
+    <style>
+      body {
+        padding: 4px;
+      }
 
-	span {
-		font-weight: 500;
-	}
+      span {
+        font-weight: 500;
+      }
 
-	input {
-		width: 100%;
-	}
-</style>
-</head>
+      input {
+        width: 100%;
+      }
+    </style>
+  </head>
 
-<body>
-	<div>
-		<h1>Configure the CircleCI Extension</h1>
-		<p>See details on setup in the <a href="https://github.com/driazati/circleci-viewer">README.md</a></p>
-	</div>
-	<div id="inputs">
-	</div>
-	<div id="status"></div>
-	<br>
-	<button id="save" disabled="true">Save</button>
+  <body>
+    <div id="inputs"></div>
+    <div id="feature-flags"></div>
+    <div id="status"></div>
+    <br />
+    <button id="save" disabled="true">Save</button>
 
-	<script src="options.js"></script>
-</body>
+    <script src="options.js"></script>
+  </body>
 </html>
